--- a/Owlendar/www/index.html
+++ b/Owlendar/www/index.html
@@ -44,7 +44,7 @@
     <script src="js/controllers.js"></script>
   </head>
 
-  <body ng-app="starter" >
+  <body ng-app="owlendar" >
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
